@@ -3,7 +3,7 @@
 
 # Python module src/gpodder/gpodder.py
 # Autogenerated from gpodder.glade
-# Generated on Mon Jan  9 00:51:18 2006
+# Generated on Mon Jan  9 22:39:58 2006
 
 # Warning: Do not modify any context comment such as #--
 # They are required to keep user's code
