@@ -5,6 +5,11 @@ Mon, 09 Jan 2006 00:13:10 +0100 <thp@perli.net>
 Son Dez 25 10:07:19 CET 2005 <thp@perli.net>
 	* Fixed "add channel" dialog "OK" button handling (works again)
 
+Sam Dez 24 15:41:57 CET 2005 <thp@perli.net>
+	+ Added "tepache" tool + tepache howto in doc/dev
+	+ Added document for development on ubuntu breezy in doc/dev
+	* Moved is_downloaded to isDownloaded in libpodcasts
+
 Don Dez  8 20:16:40 CET 2005 <thp@perli.net>
 	+ Added "edit channel" dialog
 	+ Added "libopmlwriter.py" (a dirty hack to write opml format)
